Reviewed by Eric & David.

Fixes: http://bugs.webkit.org/show_bug.cgi?id=17078

Fix getSubStringLength() handling, verified by Acid3 test 77.
Brings up Acid3 score to 88/100.

Added test: svg/custom/acid3-test-77.html
            svg/custom/getSubStringLength.html



Canonical link: https://commits.webkit.org/24455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30767 268f45cc-cd09-0410-ab3c-d52691b4dbfc