WebCore/svg/SVGTextContentElement.h
@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2004, 2005 Nikolas Zimmermann <wildfox@kde.org>
+    Copyright (C) 2004, 2005, 2008 Nikolas Zimmermann <zimmermann@kde.org>
                   2004, 2005, 2006 Rob Buis <buis@kde.org>
 
     This file is part of the KDE project
@@ -35,8 +35,7 @@ namespace WebCore {
     class SVGTextContentElement : public SVGStyledElement,
                                   public SVGTests,
                                   public SVGLangSpace,
-                                  public SVGExternalResourcesRequired
-    {
+                                  public SVGExternalResourcesRequired {
     public:
         enum SVGLengthAdjustType {
             LENGTHADJUST_UNKNOWN            = 0,
@@ -50,10 +49,9 @@ namespace WebCore {
         virtual bool isValid() const { return SVGTests::isValid(); }
         virtual bool isTextContent() const { return true; }
 
-        // 'SVGTextContentElement' functions
         long getNumberOfChars() const;
         float getComputedTextLength() const;
-        float getSubStringLength(long charnum, unsigned long nchars, ExceptionCode&) const;
+        float getSubStringLength(long charnum, long nchars, ExceptionCode&) const;
         FloatPoint getStartPositionOfChar(long charnum, ExceptionCode&) const;
         FloatPoint getEndPositionOfChar(long charnum, ExceptionCode&) const;
         FloatRect getExtentOfChar(long charnum, ExceptionCode&) const;
@@ -74,5 +72,3 @@ namespace WebCore {
 
 #endif // ENABLE(SVG)
 #endif
-
-// vim:ts=4:noet
